// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateMessage component Should be render correctly if blocking update 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            An update is available for this service.
          </ForwardRef>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              Update it to keep fetching your data
            </ForwardRef>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <DefaultButton
        className="u-m-0"
        disabled={false}
        label="Update"
        onClick={[Function]}
        theme="danger"
      />
    </div>
  </Stack>
</div>
`;

exports[`UpdateMessage component Should be render correctly if not blocking update 1`] = `
<div
  className="Infos Infos--secondary u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef
            className=""
            ellipsis={false}
            tag="div"
          >
            An update is available for this service.
          </ForwardRef>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              Perform this update to keep fetching your data and to have the latest features
            </ForwardRef>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <DefaultButton
        className="u-m-0"
        disabled={false}
        label="Update"
        onClick={[Function]}
        theme="danger"
      />
    </div>
  </Stack>
</div>
`;
